# trading_app

./: .env  .gitignore  main.py  pyproject.toml
auth/: auth.py  database.py  manager.py  schemas.py
migrations/: env.py
migrations/versions/: 2023-09-08.py  35f0a2c11d12_initial.py  bf42434fb179_fix_a_bag1.py
models/: models.py
src/: database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
src/operations/: models.py  router.py  schemas.py
